# unity-analyzer

./: .gitignore  740_0  Cargo.toml  Makefile  README.md
files/: ProjectSettings.asset
parse/: Cargo.toml
parse/src/: lib.rs  main.rs
src/: main.rs
tui/: Cargo.toml
tui/src/: main.rs
unity-yaml/: Cargo.toml
unity-yaml/src/: lib.rs  parse.rs  types.rs
unitytui/: Cargo.toml
unitytui/src/: helper.rs  input.rs  main.rs  select.rs
