[package]
name = "parse"
version = "0.1.0"
authors = ["Jihyun Yu <yjh0502@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
env_logger = "0.7.1"
log = "0.4.11"
rayon = "1.3.1"
serde = "1.0.114"
serde_derive = "1.0.114"
serde-gen = { path = "../../serde-gen" }
serde_yaml = { path = "../../serde-yaml" }
stopwatch = "0.0.7"
unity-yaml = { path = "../unity-yaml" }
gen = { path = "../gen" }
