[package]
name = "parse"
version = "0.1.0"
authors = ["Jihyun Yu <yjh0502@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
bytesize = "1"
env_logger = "0.7.1"
log = "0.4.11"
nom = "6.1"
stopwatch = "0.0.7"
