[package]
name = "unitytui"
version = "0.1.0"
authors = ["Jihyun Yu <yjh0502@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
argh = "0.1.7"
gen = { path = "../gen" }
log = "*"
simplelog = "*"
termion = "1"
tui = "0.17"
